# aula

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  1.hs  3.hs  4.hs  5.hs  ChangeLog  HLint.hs  LICENSE  Makefile  PageCreatorHOWTO.md  README  README.md  aula.cabal  fontcustom.yml  make-version.sh  null-terms-of-use.md  package.yaml  stack.yaml  wild-idea-admin.hs  wild-idea-comments.hs  wild-idea-moderator.hs  wild-idea-non-student.hs  wild-idea-student.hs
.travis/: docker-build.sh  docker-coveralls.sh  docker-hlint.sh  docker-link-stack-workdir.sh  docker-list-sandbox-packages.sh
docker/: get-ip.sh  hide-crypto-packages.sh  make-seito.sh  run.sh  selenium.sh
docs/: PageCreatorHOWTO.md  deployment.md  docker-howto.md  future-work.md  lens-faq.md  page-creator-howto.md  software-stack.md  styleguide.md  test-suites.md  testing.md
exec/: Aula.hs  AulaMigrate.hs  I18N.hs  ImportUsers.hs  InitState.hs  PageMap.hs  RenderHtml.hs  ResetAllPasswords.hs  ResizeAvatar.hs
schema/: schema.sql
scripts/: mailgun.hs  run.sh  shutdown.sh  wipe.sh
src/: Access.hs  Action.hs  Api.hs  Arbitrary.hs  AulaMetrics.hs  AulaPrelude.hs  Backend.hs  Config.hs  CreateRandom.hs  Daemon.hs  Debug.hs  DemoData.hs  EventLog.hs  Frontend.hs  LifeCycle.hs  Logger.hs  Main.hs  Persistent.hs  Transaction.hs  Types.hs
src/Action/: Dummy.hs  Implementation.hs  Smtp.hs  Stack.hs
src/Api/: NoPersistent.hs  Persistent.hs  PersistentImplementation.hs
src/Data/: Avatar.hs  DelegatedVoting.hs  Delegation.hs  DoubleMap.hs  Markdown.hs  PasswordTokens.hs  UriPath.hs  Voting.hs
src/Data/Graph/: Missing.hs
src/Data/Markdown/: HtmlWhiteLists.hs
src/Frontend/: Constant.hs  Core.hs  Filter.hs  Html.hs  Links.hs  Middleware.hs  Page.hs  PageMap.hs  Pages.hs  Path.hs  Prelude.hs  Testing.hs  Topics.hs  Validation.hs
src/Frontend/Fragment/: Category.hs  Comment.hs  ContextMenu.hs  DelegationTab.hs  Feasibility.hs  IdeaList.hs  Note.hs  PhaseTime.hs  QuorumBar.hs  VotesBar.hs  WhatListPage.hs
src/Frontend/Page/: Admin.hs  Category.hs  Comment.hs  CreateIdea.hs  Delegation.hs  FileUpload.hs  HomePageWithLoginPrompt.hs  Idea.hs  Info.hs  Login.hs  Overview.hs  ResetPassword.hs  Snippet.hs  Static.hs  Topic.hs  Topics.hs  User.hs
src/Frontend/Translation/: Login.hs
src/Logger/: EventLog.hs
src/Lucid/: I18N.hs  Missing.hs
src/Persistent/: Api.hs  Facade.hs  FacadeHelper.hs  FacadeType.hs  Idiom.hs  Implementation.hs  Pure.hs  TemplateHaskell.hs
src/Persistent/Implementation/: AcidState.hs  STM.hs
src/Types/: Core.hs  Log.hs  Old.hs  Prelude.hs  Util.hs
src/Types/Instances/: JSON.hs  Optics.hs  SOP.hs  SafeCopy.hs
static/: clustered-network-sample.json  d3-aula-sample-data-class-with-10.json  d3-aula-sample-data-class-with-25-fake-cluster.json  d3-aula-sample-data-class-with-25.json  d3-aula-sample-data-class-with-5.json  d3-aula-sample-data2.json  d3-aula.css  d3-aula.js  datenschutzerklaerung.html  samples  screen.css
static-src/: initial-passwords.xlsx
static-src/icons-svg/preview/: fontcustom-preview.html
static-src/scss/: _fonts.scss  _variables.scss  imports.scss
static-src/scss/components/: _comments.scss  _delagation.scss  _delegation-network.scss  _ideas.scss  _login-register.scss  _markdown.scss  _rooms.scss  _themes.scss  _topic.scss  _voting.scss
static-src/scss/core/: _admin.scss  _badges.scss  _buttons.scss  _container.scss  _fontcustom.scss  _fonts.scss  _footer.scss  _forms.scss  _grid.scss  _header.scss  _hero-unit.scss  _icons.scss  _lists.scss  _main-header.scss  _menus.scss  _messages.scss  _mixins.scss  _reset.scss  _tabs.scss  _type.scss  _variables.scss
static/css/: all.css  all.css.map
static/fonts/: Cabin-Bold-webfont.eot  Cabin-Regular-webfont.eot  base.css
static/icons/: fontcustom-preview.html  fontcustom.css  fontcustom_0171f0ff3cc3fc63023c861d06be2926.eot  fontcustom_0b1e86fbad48b1e11ab58d155c8f4cf0.eot  fontcustom_0c947473b2d10bde34648f972b8e4eb7.eot  fontcustom_1104679109868c1f6cf14af33d7ed0a8.eot  fontcustom_125137e1acc88ca51323b76e43dd28d6.eot  fontcustom_1353844c7144d7e3006950c1a80566b4.eot  fontcustom_13b3d58182d204883aac9fe1711535c5.eot  fontcustom_1c1b0b881a4b7f2001b940b85d1a0222.eot  fontcustom_368acfed106b6f7e88f022c62dabc0ef.eot  fontcustom_3f6e89d62c3b6e6d40cb22d5e7b703cd.eot  fontcustom_42cd88b0372ad5113ad72973ae8d7a73.eot  fontcustom_4575c68369ec5818660eb3d7e6c981ef.eot  fontcustom_4d2e8f5c7cca5d561c2ecda1af6132f7.eot  fontcustom_581bc7315f230f453b8830eb47807d37.eot  fontcustom_593fa061554926f6c86d54fed2b39d26.eot  fontcustom_5fa7525dc6c8dcaa651f317d2bf83f88.eot  fontcustom_6962b2864531749ec5bda1606d64894e.eot  fontcustom_6b9589a6b3f49a3cb3e0f65bf61f756c.eot  fontcustom_7c0592d7ba32bb0ef875acb33866bf44.eot  fontcustom_8d887996a2b692138074fde5bd39a64d.eot  fontcustom_98f77d8258d6825dcd551cc923d03b68.eot  fontcustom_9a52ba4a0e87edb285ebb45fb12098fc.eot  fontcustom_9cf23e2dd624118aa9db4509b78dac57.eot  fontcustom_c5d5ee9f079a3b11cc952a9ab467439b.eot  fontcustom_d592ae6c897905c3b4b7c450001332d1.eot  fontcustom_d9f984e29577d629364b19d640540624.eot
static/js/: custom.js
static/templates/: student_upload.csv
tests/: ActionSpec.hs  AllModulesSpec.hs  AulaTests.hs  BackendSpec.hs  Bla.hs  DelegationSpec.hs  FrontendSpec.hs  I18NSpec.hs  InitSpec.hs  LifeCycleSpec.hs  MonoidSpec.hs  SeleniumSpec.hs  TypesSpec.hs  end-to-end.md
tests/Api/: PersistentSpec.hs
tests/AulaTests/: Stories.hs  StoriesSpec.hs
tests/AulaTests/Stories/: DSL.hs  Tests.hs
tests/AulaTests/Stories/Interpreter/: Action.hs  WebDriver.hs
tests/Data/: DelegationSpec.hs  MarkdownSpec.hs  PasswordTokensSpec.hs
tests/Frontend/: CoreSpec.hs  HtmlSpec.hs  PageSpec.hs  PathSpec.hs
tests/Frontend/Page/: AdminSpec.hs  FileUploadSpec.hs  LoginSpec.hs
tests/Persistent/: ApiSpec.hs  PureSpec.hs
tests/Test/Hspec/: Missing.hs
tests/Test/QuickCheck/: Missing.hs
tests/Test/WebDriver/: Missing.hs
travis/: docker-build.sh  docker-hlint.sh
