name:                aula
version:             0.1.0
-- synopsis:
-- description:
license:             AGPL
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
      Api
    , Arbitrary
    , Config
    , Frontend
    , Frontend.Html
    , Transaction
    , Types
  build-depends:
      base >=4.8 && <4.9
    , aeson
    , binary
    , blaze-builder
    , blaze-html
    , blaze-markup
    , bytestring
    , case-insensitive
    , cassava
    , containers
    , cookie
    , directory
    , filepath
    , functor-infix
    , http-types
    , lens
    , mtl
    , postgresql-simple
    , pretty-show
    , process
    , QuickCheck
    , quickcheck-instances
    , transformers
    , wai
    , warp
    , safecopy
    , scrypt
    , servant
    , servant-blaze
    , servant-server
    , string-conversions
    , text
    , time
  hs-source-dirs:
      src
  default-language:
      Haskell2010

executable aula-server
  main-is:
      Aula.hs
  hs-source-dirs:
      exec
  build-depends:
      base >=4.8 && <4.9
    , aula
  default-language:
      Haskell2010

executable aula-import-users
  main-is:
    ImportUsers.hs
  hs-source-dirs:
      exec
  build-depends:
      base >=4.8 && <4.9
    , aula
    , bytestring
    , cassava
    , nonce
    , postgresql-simple
    , text
    , vector
  default-language:
      Haskell2010

executable aula-html-dummies
  main-is:
    RenderHtml.hs
  hs-source-dirs:
      exec
  build-depends:
      base >=4.8 && <4.9
    , aula

    , acid-state
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , cassava
    , containers
    , cookie
    , directory
    , lens
    , mtl
    , postgresql-simple
    , pretty-show
    , QuickCheck
    , quickcheck-instances
    , safecopy
    , scrypt
    , servant
    , servant-blaze
    , servant-server
    , string-conversions
    , text
    , time
    , aeson
    , transformers
    , case-insensitive
    , http-types
    , wai
    , warp
    , process
    , filepath
    , blaze-builder
  default-language:
      Haskell2010
