name:                aula
version:             0.1.0
-- synopsis:
-- description:
license:             AGPL
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
      Api
    , Api.Persistent
    , Arbitrary
    , Config
    , CreateRandom
    , Frontend
    , Frontend.Core
    , Frontend.Html
    , Frontend.Page.CreateIdea
    , Frontend.Page.Login
    , Frontend.Page.Static
    , Frontend.Page.Topic
    , Frontend.Page
    , Persistent
    , Transaction
    , Types
  build-depends:
      base >=4.8 && <4.9
    , thentos-core
    , aeson
    , binary
    , bytestring
    , case-insensitive
    , cassava
    , containers
    , cookie
    , digestive-functors
    , digestive-functors-lucid
    , directory
    , filepath
    , functor-infix
    , http-types
    , lens
    , lucid
    , mtl
    , postgresql-simple
    , pretty-show
    , process
    , QuickCheck
    , quickcheck-instances
    , stm
    , transformers
    , wai
    , warp
    , safecopy
    , scrypt
    , servant
    , servant-lucid
    , servant-server
    , string-conversions
    , text
    , time
  hs-source-dirs:
      src
  default-language:
      Haskell2010

executable aula-server
  main-is:
      Aula.hs
  hs-source-dirs:
      exec
  build-depends:
      base >=4.8 && <4.9
    , aula
  default-language:
      Haskell2010

executable aula-import-users
  main-is:
    ImportUsers.hs
  hs-source-dirs:
      exec
  build-depends:
      base >=4.8 && <4.9
    , aula
    , bytestring
    , cassava
    , nonce
    , postgresql-simple
    , text
    , vector
  default-language:
      Haskell2010

executable aula-html-dummies
  main-is:
    RenderHtml.hs
  hs-source-dirs:
      exec
  build-depends:
      base >=4.8 && <4.9
    , aula

    , binary
    , bytestring
    , cassava
    , containers
    , cookie
    , directory
    , fsnotify
    , lens
    , lucid
    , mtl
    , postgresql-simple
    , pretty-show
    , QuickCheck
    , quickcheck-instances
    , safecopy
    , scrypt
    , servant
    , servant-server
    , string-conversions
    , text
    , time
    , aeson
    , transformers
    , case-insensitive
    , http-types
    , wai
    , warp
    , process
    , filepath
  default-language:
      Haskell2010

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  main-is:
      Spec.hs
  build-depends:
      aula
    , base >=4.8 && <4.9
    , binary >= 0.7.5 && <0.8
    , digestive-functors >= 0.8 && <0.9
    , hspec
    , lucid
    , QuickCheck >= 2.8 && <2.9
    , text
    , lens
    , mtl
    , transformers
    , string-conversions
    , servant-server
